--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run dev",
-  "devCommand": "npm run dev --turbopack"
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev --turbopack",
+  "functions": {
+    "app/api/**/*.ts": {
+      "maxDuration": 300
+    }
+  }
 }
