--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev --turbopack",
-  "functions": {
-    "app/api/**/*.ts": {
-      "maxDuration": 300
-    }
-  }
+  "framework": "nextjs"
 }
